fix
오늘 마지막 업뎃 - 분석 화면 고침